# avd-health-monitor

./: .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  winget-publish.yml  winget-publish.yml.template
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/1-installer-fixes/: 1-01-PLAN.md  1-01-SUMMARY.md  1-02-PLAN.md  1-02-SUMMARY.md  1-RESEARCH.md  1-VERIFICATION.md
.planning/phases/2-component-refactor/: 2-01-PLAN.md  2-01-SUMMARY.md  2-02-PLAN.md  2-02-SUMMARY.md  2-RESEARCH.md  2-VERIFICATION.md
.planning/phases/3-state-refactor/: 3-01-PLAN.md  3-01-SUMMARY.md  3-02-PLAN.md  3-02-SUMMARY.md  3-03-PLAN.md  3-03-SUMMARY.md  3-04-PLAN.md  3-04-SUMMARY.md  3-05-PLAN.md  3-05-SUMMARY.md  3-RESEARCH.md  3-VERIFICATION.md
.planning/phases/4-race-conditions/: 4-01-PLAN.md  4-01-SUMMARY.md  4-02-PLAN.md  4-02-SUMMARY.md  4-RESEARCH.md  4-VERIFICATION.md
.planning/phases/5-type-unification/: 5-01-PLAN.md  5-01-SUMMARY.md  5-02-PLAN.md  (+3 more)
scripts/: generate-types.sh
src/: App.tsx  errors.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: enduser-endpoints.json  sessionhost-endpoints.json  settings.json
src-tauri/src/: autostart.rs  export.rs  fslogix.rs  latency.rs  lib.rs  logger.rs  main.rs  path_safety.rs  settings.rs  tray_icon.rs  validation.rs
src/__mocks__/: zustand.ts
src/components/: Dashboard.tsx  EndpointCard.tsx  EndpointTile.tsx  ErrorBoundary.tsx  FSLogixSection.tsx  OfflineBanner.tsx  SettingsPanel.tsx
src/hooks/: useOfflineDetection.ts  useSettingsSync.ts  useTrayIcon.ts
src/lib/: stateUtils.ts  utils.test.ts  utils.ts
src/services/: exportService.ts  fslogixService.ts  historyExportService.ts  importService.ts  index.ts  latencyService.ts
src/store/: types.ts  useAppStore.test.ts  useAppStore.ts
src/test/: setup.ts  tauriMocks.ts
(+40 files in other folders)
