[package]
name = "avd-health-monitor"
version = "0.2.0" # x-release-please-version
description = "Azure Virtual Desktop Health Monitor - Monitor AVD endpoint health in real-time"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "avd_health_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optimized tokio features: only include what's actually used
# - rt-multi-thread: async runtime for concurrent operations
# - net: TcpStream for latency testing
# - time: timeout functionality
# - sync: for spawn_blocking used in DNS resolution
# - macros: for #[tokio::test] in tests
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
# Updated reqwest to 0.12 with minimal features
# Note: 0.12 uses hyper 1.0 and requires rustls or native-tls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
surge-ping = "0.8"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
image = { version = "0.25", features = ["png"] }
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

# Use faster linker on Windows (requires rust-lld, included with rustup)
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

# Optimize build times
[profile.dev]
# Faster compilation for development
incremental = true
# Reduce optimization for faster builds
opt-level = 1

[profile.dev.package."*"]
# But keep dependencies optimized for better runtime performance
opt-level = 3

[profile.release]
# Full optimization for release builds
opt-level = 3
lto = true
codegen-units = 1
strip = true
